deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-deployment
  labels:
    app: feed-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-app
  template:
    metadata:
      labels:
        app: feed-app
    spec:
      containers:
      - name: feed-app
        image: gcr.io/feisty-deck-351210/feedback
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"

---

apiVersion: v1
kind: Service
metadata:
  name: feed-service
spec:
  type: LoadBalancer
  selector:
    app: feed-app
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8000
