service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feed-service
spec:
  type: LoadBalancer
  selector:
    app: feed-app
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8000
